refactor: improve validation